refactor: adopt JDK 25 idioms in bootstrap, staff catalog, dino service
Bootstrap: switch to compact main form (JEP 512) — drop `public` and the
unused `String[] args`.

DinoInstanceService.applyHappiness: collapse `Math.max(0, Math.min(100, x))`
into `Math.clamp(x, 0, 100)`. One call instead of nested ones; no chance
to get the bounds backwards.

StaffCatalog: replace three `instanceof Map` + `@SuppressWarnings`-decorated
unchecked casts with pattern-matching binders (`instanceof Map<?, ?> m`).
Widens `parseRole`/`parseEffect`/`require*` to take `Map<?, ?>` since they
only call `.get(Object)` and treat values as Object anyway. Removes all
unchecked-cast warnings from this file.